--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body,
-      div:first-child {
-        margin: 0;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <main></main>
-    <script src="https://unpkg.com/elm-canvas@2.2/elm-canvas.js"></script>
-    <script src="./elm.js"></script>
-    <script>
-      var app = Elm.Main.init({ node: document.querySelector("main") });
+
+<head>
+  <style>
+    body,
+    div:first-child {
+      margin: 0;
+      height: 100vh;
+    }
+  </style>
+</head>
+
+<body>
+  <main></main>
+  <script src="https://unpkg.com/elm-canvas@2.2/elm-canvas.js"></script>
+  <script src="./elm.js"></script>
+  <script>
+    var app = Elm.Main.init({ 
+      node: document.querySelector("main"),
+      flags: Math.random()
+    });
       // you can use ports and stuff here
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
